v4.1.3
- bug correction for heatmap* functions with pkg = "plotly"
- use uniroot instead of optimize to find the ci bounds for functional data
- bug corrections in plotDataCI and plotDataBoxplot when using class parameter (color, position, error when combined with grl = TRUE)
- add unexported icl function

v4.1.2 2020-06-04
- print.MixtComp prints correctly functional and rank parameters
- add getProportion function
- doc correction
- add class parameter to plotDataBoxplot, plotDiscrimVar and computeDiscrimPowerVar functions
- getCompletedData returns a data.frame with proper column types and returns rank as a string
- label order correction for functional data

v4.1.0 2019-12-16
- can use grl = TRUE in plot.MixtComp
- add plotData parameter in plot.MixtComp
- bug correction in extractCIPoissonVble when grl = TRUE
- plotDataBoxplot uses ggplot2 and plotly
- plotParamConvergence works for nClass = 1

v4.0.0 2019-08-27
- On CRAN, Now

v0.1 2019-07-02
- Extract plot and getter functions from RMixtComp